Add user feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=TransactFlow
+# sql connect
+spring.datasource.url=jdbc:mysql://localhost:3306/transact-flow
+spring.datasource.username=root
+spring.datasource.password=Jacky1029!
+
+# JPA config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
