--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/transact-flow
 spring.datasource.username=root
 spring.datasource.password=Jacky1029!
 
+
 # JPA config
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+
 
