--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/transact-flow
 spring.datasource.username=root
 spring.datasource.password=Jacky1029!
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
 
 # JPA config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
